[^] Update: fix missaligned styling

--- a/style.css
+++ b/style.css
@@ -242,14 +242,13 @@ form::after{
 .label{
     font-family: "VT323", Monospace;
     font-size: 18px;
-    margin: 22.5rem 0 0 4rem;
+    margin: 20.5rem 0 0 2.5rem;
     width: 100%;
     height: 100px;
     z-index: 4;
-    position: absolute;
     color: rgb(255, 77, 0);
     overflow: hidden;
-    
+    position: absolute;
 }
 
 #result-btn{
